<resources>
    <string name="app_name">Screen Sharing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="screen_sharing">Screen Sharing</string>
    <string name="settings_for_developers">Settings (for developers)</string>
    <string name="watch">Watch</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="share_share_your_phone_screen">Share \n(share your phone screen)</string>
    <string name="watch_watch_someone_s_screen">Watch \n(watch someone\'s screen)</string>
    <string name="help_how_to_use_it">Help \n(how to use it)</string>
    <string name="ip">IP:</string>
    <string name="port">PORT:</string>
    <string name="save">Save!</string>
    <string name="id">ID:</string>
    <string name="title_activity_watch">ActivityWatch</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="quality_of_broadcasting">Quality of broadcasting:</string>
    <string name="_1">1</string>
    <string name="first_of_all_there_are_two_features_in_this_app_sharing_screen_and_watching_someone_sharing_screen_if_you_want_to_share_your_screen_you_must_press_the_corresponding_button_on_the_main_screen_after_starting_sharing_screen_you_will_get_your_id_if_you_want_to_see_someone_s_screen_you_must_know_his_id_so_you_are_suppose_to_enter_it_in_a_proper_field_after_pressing_the_second_button_on_the_main_screen_and_press_the_first_button_from_bottom_the_settings_menu_is_supposed_to_be_used_by_a_developers_who_know_server_s_ip_and_port_also_you_can_change_your_stream_quality_to_have_a_better_videos">First of all, there are two features in this app: sharing screen and watching someone sharing screen. If you want to share your screen you must press the corresponding button on the main screen. After starting sharing screen you will get your ID. If you want to see someone\'s screen you must know his ID. So, you are suppose to enter it in a proper field after pressing the second button on the main screen, and press the first button from bottom. The settings menu is supposed to be used by a developers, who know server\'s IP and port. Also you can change your stream quality to have a better videos.</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>
