<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_watch"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/watch" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings_for_developers" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/help" />
    </group>

</menu>
