<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentSettings">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality_of_broadcasting"
                android:textSize="28sp"
                />

            <TextView
                android:id="@+id/textQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginStart="15dp"
                android:text="@string/_1"/>
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="338dp"
            android:layout_height="30dp"
            android:min="2"
            tools:targetApi="o"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/ip"
                android:layout_marginEnd="10dp" />

            <EditText
                android:id="@+id/editText_ip"
                android:width="297dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor"
                android:digits="0123456789." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/port"
                android:layout_marginEnd="10dp"/>

            <EditText
                android:id="@+id/editText_port"
                android:width="250dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/button_save"/>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>