<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/fragmentSharing"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="1"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="35sp"
                    android:ems="10"
                    android:layout_margin="15dp"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/sharingID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="35sp"
                    android:ems="10"
                    android:layout_margin="15dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:ems="10"
            android:layout_margin="15dp"
            android:text="@string/start"/>

        <Button
            android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:ems="10"
            android:layout_margin="15dp"
            android:text="@string/stop"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>